[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/bossArrow.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/bossArrow.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 12.0

[node name="bossArrow" type="Node2D"]
script = ExtResource( 2 )

[node name="bossArrowSprite" type="Sprite" parent="."]
position = Vector2( -1, 1 )
rotation = 1.5708
scale = Vector2( 2.58305, 1.70119 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.53674e-07, 1.5 )
scale = Vector2( 0.7, 3.45 )

[node name="bossArrowHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bossArrowHitbox"]
scale = Vector2( 4, 4 )
shape = SubResource( 1 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="bossArrowHitbox" to="." method="_on_bossArrowHitbox_area_entered"]
[connection signal="body_entered" from="bossArrowHitbox" to="." method="_on_bossArrowHitbox_body_entered"]
